--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react": "^7.26.1",
     "next-sitemap": "^1.6.203",
     "postcss": "^8.3.11",
+    "prettier": "^2.7.1",
     "tailwindcss": "^2.2.19"
   },
   "bugs": {
