--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "preact": "^10.5.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-notion-x": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "eslint": "<8.0.0",
     "eslint-config-next": "^12.0.3",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
