--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
+    "lint": "next lint",
+    "deploy": "next build && next export && firebase login --no-localhost && firebase deploy --only hosting:morethanmin"
   },
   "dependencies": {
     "axios": ">=0.21.1",
@@ -34,6 +36,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.26.1",
+    "firebase": "^9.14.0",
+    "firebase-tools": "^11.16.1",
+    "next-sitemap": "^3.1.32",
     "postcss": "^8.3.11",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.4"
