--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,11 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: install --production
+        run: yarn install
 
       - name: Build And Deploy
-        uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: next build && next export && deploy --only hosting:morethanmin --token "${{ secrets.FIREBASE_TOKEN }}"
+        run: yarn next build && next export && deploy --only hosting:morethanmin --token "${{ secrets.FIREBASE_TOKEN }}"
