refactor: update ci/cd

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,3 +16,5 @@ jobs:
 
       - name: Build And Deploy
         run: yarn next build && next export && deploy --only hosting:morethanmin --token "${{ secrets.FIREBASE_TOKEN }}"
+        env:
+          NOTION_PAGE_ID: ${{ secrets.NOTION_PAGE_ID }}
