--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,7 @@
   "hosting": {
     "site": "morethanmin",
     "public": "out",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "cleanUrls": true
   }
 }
