--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "react-notion-x": "^4.11.0"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.12",
+    "@types/node": "^18.11.15",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.0",
     "eslint": "<8.0.0",
     "eslint-config-next": "^12.0.3",
@@ -38,6 +42,7 @@
     "next-sitemap": "^3.1.32",
     "postcss": "^8.3.11",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.1.4",
+    "typescript": "^4.9.4"
   }
 }
