adding post author  (#41)
* feat: update typescript

* fix: build error

* refactor: refactoring code

* refactor: refactoring code

* chore: update config

* chore: update README.md

* feat: updating author property

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@hooks/*": ["src/hooks/*"],
       "@libs/*": ["src/libs/*"],
       "@pages/*": ["src/pages/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@types/*": ["src/types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/libs/gtag.ts"],
