--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,9 @@
       "@libs/*": ["src/libs/*"],
       "@pages/*": ["src/pages/*"],
       "@styles/*": ["src/styles/*"],
-      "@types/*": ["src/types/*"]
+      "@custeomTypes/*": ["src/types/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/libs/gtag.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/libs/plugin/gtag.ts"],
   "exclude": ["node_modules"]
 }
