--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "notion-utils": "^4.10.0",
     "preact": "^10.5.15",
     "react": "^17.0.2",
+    "react-cusdis": "^2.1.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-notion-x": "^4.11.0"
