--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "@libs/*": ["src/libs/*"],
       "@pages/*": ["src/pages/*"],
       "@styles/*": ["src/styles/*"],
-      "@custeomTypes/*": ["src/types/*"]
+      "@customTypes/*": ["src/types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/libs/plugin/gtag.ts"],
