[FEAT] add "category" property (#122)
* feat: add category

* feat: update coloring logic

* fix: update tailwind

* fix: add category readOnly props

* feat: add category inputs

* fix: category ui issue

* fix: typo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
       "@customTypes/*": ["src/types/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/libs/plugin/gtag.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/libs/gtag.ts"],
   "exclude": ["node_modules"]
 }
