--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@radix-ui/colors": "^1.0.0",
+    "@tabler/icons-react": "^3.1.0",
     "@tanstack/react-query": "^4.29.19",
     "axios": ">=0.21.1",
     "cookies-next": "^2.1.2",
@@ -29,6 +30,7 @@
     "react": "^18.2.0",
     "react-cusdis": "^2.1.3",
     "react-dom": "^18.2.0",
+    "react-gravatar": "^2.6.3",
     "react-icons": "^4.4.0",
     "react-notion-x": "^6.16.0"
   },
@@ -37,6 +39,7 @@
     "@types/node": "^18.11.15",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-gravatar": "^2.6.14",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.4.7",
