--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons-react": "^3.1.0",
     "@tanstack/react-query": "^4.29.19",
     "axios": ">=0.21.1",
+    "bootstrap": "^5.3.3",
     "cookies-next": "^2.1.2",
     "mermaid": "^9.3.0",
     "next": "^13.4.9",
