--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@radix-ui/colors": "^1.0.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@tabler/icons-react": "^3.1.0",
     "@tanstack/react-query": "^4.29.19",
     "axios": ">=0.21.1",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cookies-next": "^2.1.2",
-    "mermaid": "^9.3.0",
+    "lucide-react": "^0.427.0",
+    "mermaid": "^10.9.1",
     "next": "^13.4.9",
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
@@ -33,7 +38,9 @@
     "react-dom": "^18.2.0",
     "react-gravatar": "^2.6.3",
     "react-icons": "^4.4.0",
-    "react-notion-x": "^6.16.0"
+    "react-notion-x": "^6.16.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.12",
