--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^2.1.2",
     "lucide-react": "^0.427.0",
+    "md5": "^2.3.0",
     "mermaid": "^10.9.1",
     "next": "^13.4.9",
     "notion-client": "^6.16.0",
@@ -36,7 +37,6 @@
     "react": "^18.2.0",
     "react-cusdis": "^2.1.3",
     "react-dom": "^18.2.0",
-    "react-gravatar": "^2.6.3",
     "react-icons": "^4.4.0",
     "react-notion-x": "^6.16.0",
     "tailwind-merge": "^2.5.2",
@@ -44,10 +44,10 @@
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.12",
+    "@types/md5": "^2.3.5",
     "@types/node": "^18.11.15",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/react-gravatar": "^2.6.14",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.4.7",
