--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^2.1.2",
+    "graphql-request": "^7.1.0",
     "lucide-react": "^0.427.0",
     "md5": "^2.3.0",
     "mermaid": "^10.9.1",
     "next": "^13.4.9",
+    "node-fetch": "^3.3.2",
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
     "notion-utils": "^6.16.0",
