--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^2.1.2",
+    "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "lucide-react": "^0.427.0",
     "md5": "^2.3.0",
