--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@radix-ui/colors": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "^4.29.19",
@@ -31,6 +34,7 @@
     "md5": "^2.3.0",
     "mermaid": "^10.9.1",
     "next": "^13.4.9",
+    "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
