--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "cookies-next": "^2.1.2",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
-    "lucide-react": "^0.427.0",
+    "lucide-react": "^0.436.0",
     "md5": "^2.3.0",
     "mermaid": "^10.9.1",
     "next": "^13.4.9",
@@ -61,6 +61,7 @@
     "postcss": "^8.3.11",
     "prettier": "^2.7.1",
     "prismjs": "^1.29.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^4.9.4"
   }
 }
